--- a/90s_Music.html
+++ b/90s_Music.html
@@ -8,7 +8,7 @@
 	<ol> 2. Wannabe by spice girls</ol>
 	<ol> 3. Baby one more time by britney spears</ol>
 
- <img src="images/90s-music-cassette-tapes-records-graphic-art.webp" alt="90s image">
+ <img src="images/90s-music-cassette-tapes-records-graphic-art.png" alt="90s image">
 </body>
 </html>
 
